made a couple of changes hoping to fix word wrapping...did not happen :(

--- a/public/app.css
+++ b/public/app.css
@@ -22,3 +22,7 @@
 .spacer-lg {
     margin: 20px;
 }
+
+.wrap-break-word {
+    word-wrap: break-word;
+}
